...
              _current = index;
            });
          },
        ),
      ),
      bottomSheet: buildBottomSheetButton(
        key: const Key('StartAppButton'),
        context: context,
        text: '시작하기',
        backgroundColor: primary700,
        onPressed: moveToLoginView,
      ),
    );
...
